--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pandas = "^1.5.2"
 prefect-jupyter = "^0.2.0"
 interrogate = "^1.5.0"
 joblib = "^1.2.0"
+black = "^23.3.0"
 
 
 [tool.poetry.dev-dependencies]
