--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,12 @@ description = ""
 authors = ["Marco Pinheiro"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "3.8.10"
 pdoc3 = "^0.10.0"
 notebook = "^6.4.10"
 prefect = "^2.7.6"
 scikit-learn = "^1.2.0"
-pandas = "^1.5.2"
+pandas = "1.5.2"
 prefect-jupyter = "^0.2.0"
 interrogate = "^1.5.0"
 joblib = "^1.2.0"
